Overflow fixed

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -72,6 +72,7 @@ html {
 
 body {
 	margin-bottom: 4rem;
+	padding-bottom: 4rem;
 	display: flex;
 	flex-direction: column;
 }
@@ -315,7 +316,6 @@ footer {
 	flex: 0 0 calc(100% - 1.2rem);
 	height: 60vw;
 	box-shadow: 0px 0px 10px 2px lightgrey;
-	overflow: hidden;
 	&>i {
 		font-size: 2.25rem;
 		background: linear-gradient(to right, #F15861 20%, #F78F6A 100%);
